[package]
name = "twm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bitflags = "2.6.0"
profiling = { version = "1.0.15", features = ["profile-with-tracy"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = [
  "max_level_trace",
  "release_max_level_debug",
] }

[dependencies.smithay]
git = "https://github.com/Smithay/smithay.git"
default-features = false
features = ["backend_winit", "wayland_frontend", "desktop"]
